k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-site
  template:
    metadata:
      labels:
        app: portfolio-site
    spec:
      containers:
      - name: portfolio-site
        image: ghcr.io/lucasdeliberal/portfolio-site:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
