k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  type: ClusterIP
  selector:
    app: portfolio-site
  ports:
  - port: 80
    targetPort: 80
